--- a/style.css
+++ b/style.css
@@ -1,22 +1,67 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
+    font-family: 'Poppins', sans-serif;
 }
 
 .container{
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
+}
+
+i{
+    cursor: pointer;
+    margin: 0px 10px;
 }
 
 /* Start */
 
 .wrapper{
     background: rgb(113, 113, 232);
+    padding: 20px 30px;
+    border-radius: 10px;
+    margin-top: 20px;
 }
+
 .menu{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 10px;
+    color: white;
+}
+
+/* Text area */
+
+textarea{
+    width: 100%;
+    margin-top: 20px;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 18px;
+}
+
+/* For JS */
+.bold{
+    font-weight: bold;
+}
+
+.italic{
+    font-style: italic;
+}
+
+.underline{
+    text-decoration: underline;
+}
+
+.text-left{
+    text-align: left;
+}
+.text-center{
+    text-align: center;
+}
+.text-right{
+    text-align: right;
 }
