--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
 i{
     cursor: pointer;
     margin: 0px 10px;
+    padding: 3px 5px;
+    border-radius: 5px;
 }
 
 /* Start */
@@ -33,6 +35,19 @@ i{
     color: white;
 }
 
+/* Buttons */
+
+.clicked_btn{
+    background-color: red;
+    padding: 3px 5px;
+    border-radius: 5px;
+}
+
+
+
+
+
+
 /* Text area */
 
 textarea{
@@ -46,6 +61,7 @@ textarea{
 /* For JS */
 .bold{
     font-weight: bold;
+    
 }
 
 .italic{
